<resources>
    <string name="app_name">Share Vid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="trade">Trade</string>
    <string name="seeUser">User</string>
    <string name="hello_world">Hellooooo Wrolds</string>
    <string name="Home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="trades">Trades</string>
    <string name="trades_information">Trades Information</string>
    <string name="messages">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="year">Year : </string>
    <string name="state">State :</string>
    <string name="back">Back</string>
</resources>
